--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,12 +1,29 @@
+html,
+body {
+    height: 100%;
+}
+
 body {
     font-size: 16px;
     line-height: 30px;
     color: $default;
+    display: flex;
+    flex-direction: column;
     @extend %dmsans-400;
 }
 
-.container {
-    width: 1800px;
+.big-container {
+    max-width: 1800px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.container {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.main {
+    flex-grow: 1;
 }
