--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,6 @@
-$default: #585858;
 $title: #243f4d;
 $accent: #436372;
-$primary: #7b7b7b;
+$default: #7b7b7b;
 
 %dmsans-400 {
     font-family: "DMSans-Regular", sans-serif;
