--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -50,7 +50,6 @@
         margin: 0 auto;
     }
 
-
     &__group-btn {
         display: flex;
         align-items: center;
@@ -91,6 +90,123 @@
         height: 50px;
         background-color: #a3bbc8;
         border-radius: 50%;
+    }
+}
+
+.footer {
+    padding-top: 80px;
+}
+
+.footer-top {
+    border-bottom: 1px solid $default;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 65px;
+    }
+
+    &__contacts {
+        max-width: 200px;
+    }
+
+    &__nav {
+        max-width: 200px;
+    }
+
+    &__logo {
+        display: block;
+        margin-bottom: 30px;
+    }
+
+    &__address,
+    &__phone,
+    &__email {
+        display: block;
+        font-size: 14px;
+        line-height: 24px;
+        color: $default;
+        margin-bottom: 10px;
+    }
+
+    &__title {
+        margin: 15px 0 20px;
+        text-transform: uppercase;
+        font-size: 16px;
+        line-height: 21px;
+        color: #1f2044;
+        @extend %dmsans-700;
+    }
+
+    &__list-item {
+        display: block;
+        margin-bottom: 10px;
+        line-height: 1.2;
+    }
+
+    &__link {
+        font-size: 14px;
+        color: $default;
+        @extend %rubik-400;
+    }
+
+    &__subscribe {
+        max-width: 275px;
+    }
+
+    &__text {
+        font-size: 14px;
+        line-height: 24px;
+        margin-bottom: 35px;
+    }
+
+    &__input {
+        max-width: 170px;
+        width: 100%;
+        border: none;
+        padding: 4px 15px;
+        background-color: #fef7f0;
+
+        &::placeholder {
+            font-size: 12px;
+            color: $title;
+            @extend %dmsans-500;
+        }
+    }
+
+    &__btn {
+        border: none;
+        background-color: #a3bbc8;
+        color: #fff;
+        cursor: pointer;
+        padding: 4px 13px;
+        margin-left: -4px;
+    }
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 90px;
+    font-size: 14px;
+    line-height: 1.2;
+
+    &__list {
+        display: flex;
+        margin-right: -14px;
+    }
+
+    &__item {
+        padding: 0 14px;
+    }
+
+    &__item:not(:last-child) {
+        border-right: 1px solid $default;
+    }
+
+    &__link {
+        color: $default;
     }
 }
 
