--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -27,3 +27,11 @@ body {
 .main {
     flex-grow: 1;
 }
+
+%btn {
+    background-color: #a3bbc8;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+}
+
