--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,7 @@
 $title: #243f4d;
 $accent: #436372;
 $default: #7b7b7b;
+$bg: #fcd7b6;
 
 %dmsans-400 {
     font-family: "DMSans-Regular", sans-serif;
