--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,10 @@
 $title: #243f4d;
 $accent: #436372;
-$default: #7b7b7b;
-$bg: #fcd7b6;
+$default: #8b8b8b;
+$bg-accent: #fcd7b6;
+$bg: #f9f9f9;
+$primary: #a3bbc8;
+
 
 %dmsans-400 {
     font-family: "DMSans-Regular", sans-serif;
