--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -540,6 +540,89 @@
     }
 }
 
+.design {
+    padding-top: 105px;
+
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__title {
+        margin-bottom: 35px;
+    }
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 30px;
+        margin-bottom: 125px;
+    }
+
+    &__item {
+        width: 370px;
+        background-color: #f8f8f8;
+        height: 246px;
+        padding: 35px 40px;
+        border-radius: 3px;
+        background-repeat: no-repeat;
+        background-position: 90% center;
+    }
+
+    &__item-title {
+        max-width: 175px;
+        color: #191919;
+        font-size: 20px;
+        line-height: 1.2;
+        @extend %dmsans-700;
+        margin-bottom: 18px;
+    }
+
+    &__item-style {
+        color: $primary;
+        font-weight: bold;
+        line-height: 1.2;
+        text-transform: capitalize;
+    }
+}
+
+.design-video {
+    background-image: url("../images/design-video-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__play {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        width: 126px;
+        height: 126px;
+        background: rgba($primary, 0.4);
+    }
+
+    &__img {
+        position: relative;
+        padding: 36px;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        border-radius: 50%;
+        background-color: $primary;
+        width: 98px;
+        height: 98px;
+    }
+}
+
 
 @import "media";
 
