--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,6 +14,8 @@
 }
 
 .menu {
+    padding-left: 150px;
+
     &__list {
         display: flex;
     }
@@ -723,8 +725,130 @@
         justify-content: space-evenly;
         align-items: center;
     }
+
+    &--login-page {
+        padding: 75px 0 90px;
+        background-color: #fef7f0;
+    }
 }
 
+.top {
+    max-width: 1920px;
+    padding: 33px 0;
+    background-color: #edf1f4;
+    text-align: center;
+
+    &__title {
+        @extend %rubik-400;
+        font-size: 36px;
+        color: #222933;
+        line-height: 24px;
+        margin-bottom: 10px;
+    }
+}
+
+
+.breadcrumbs {
+    &__link {
+        @extend %rubik-400;
+        font-size: 14px;
+        line-height: 24px;
+        color: #888c91;
+        margin: 0 8px;
+        position: relative;
+
+        &::after {
+            content: '/';
+            position: absolute;
+            bottom: -4px;
+            right: -12px;
+        }
+
+        &:last-child {
+            &::after {
+                display: none;
+            }
+        }
+    }
+}
+
+.login-page {
+    padding: 120px 0;
+
+    &__form {
+        max-width: 570px;
+        width: 100%;
+        margin: 0 auto;
+        @extend %rubik-400;
+        font-size: 14px;
+        line-height: 24px;
+        color: #436372;
+        position: relative;
+    }
+
+    &__label {
+        margin-bottom: 25px;
+    }
+
+    &__input {
+        display: block;
+        width: 100%;
+        margin-top: 5px;
+        border: 2px solid #f6f6f6;
+        padding: 15px;
+        font-size: 16px;
+        margin-bottom: 25px;
+
+        &:-webkit-autofill {
+            -webkit-box-shadow: inset 0 0 0 50px #fff;
+        }
+    }
+
+    &__button {
+        @extend %btn;
+        @extend %rubik-500;
+        margin-top: 10px;
+        font-size: 18px;
+        padding: 15px 0;
+        width: 100%;
+        margin-bottom: 25px;
+    }
+
+
+    &__box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 2px solid #f6f6f6;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+
+        label {
+            margin-bottom: 0;
+        }
+    }
+
+    &__lostPasswordLink {
+        color: #436372;
+    }
+
+    &__registerLink {
+        color: #436372;
+        display: block;
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    &__createLink {
+        display: block;
+        text-align: center;
+        border: 1px solid $primary;
+        padding: 20px 0;
+        color: $title;
+        @extend %rubik-500;
+        font-size: 18px;
+    }
+}
 
 @import "media";
 
