--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -726,7 +726,7 @@
         align-items: center;
     }
 
-    &--login-page {
+    &--modal {
         padding: 75px 0 90px;
         background-color: #fef7f0;
     }
