--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -29,6 +29,16 @@
 }
 
 @font-face {
+    font-family: "Rubik-Light" ;
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+    src: local("Rubik-Light"),
+    url("../fonts/Rubik-Light.woff2"),
+    url("../fonts/Rubik-Light.woff");
+}
+
+@font-face {
     font-family: "Rubik-Regular" ;
     font-weight: 400;
     font-style: normal;
@@ -47,4 +57,16 @@
     url("../fonts/Rubik-Medium.woff2"),
     url("../fonts/Rubik-Medium.woff");
 }
+
+@font-face {
+    font-family: "Rubik-Bold" ;
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    src: local("Rubik-Bold"),
+    url("../fonts/Rubik-Bold.woff2"),
+    url("../fonts/Rubik-Bold.woff");
+}
+
+
 
