--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -21,6 +21,11 @@ $primary: #a3bbc8;
     font-weight: 700;
 }
 
+%rubik-300 {
+    font-family: "Rubik-Light", sans-serif;
+    font-weight: 300;
+}
+
 %rubik-400 {
     font-family: "Rubik-Regular", sans-serif;
     font-weight: 400;
@@ -29,4 +34,9 @@ $primary: #a3bbc8;
 %rubik-500 {
     font-family: "Rubik-Medium", sans-serif;
     font-weight: 500;
+}
+
+%rubik-700 {
+    font-family: "Rubik-Bold", sans-serif;
+    font-weight: 700;
 }
