--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -40,3 +40,7 @@ $primary: #a3bbc8;
     font-family: "Rubik-Bold", sans-serif;
     font-weight: 700;
 }
+
+%checkbox-hidden {
+    display: none;
+}
