--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1165,6 +1165,10 @@
 
     &__item {
         margin-bottom: 45px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -1286,9 +1290,59 @@
         padding: 10px 22px 10px 15px;
 
     }
-
-
 }
+
+.filter-recent-products {
+    &__items {
+        display: flex;
+        flex-direction: column;
+        gap: 25px 0;
+    }
+
+    &__item {
+        display: flex;
+        font-size: 14px;
+        @extend %rubik-400;
+        color: #333333;
+        line-height: 10px;
+    }
+
+    &__box {
+        flex-basis: 180px;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    &__link {
+        display: block;
+        border: 2px solid #f2f2f2;
+        background-color: #fefefe;
+        width: 67px;
+        height: 67px;
+        margin-right: 20px;
+    }
+
+    &__img {
+        margin: 0 auto;
+    }
+
+    &__title-link {
+        color: #333333;
+
+    }
+
+    &__title {
+        color: #333333;
+        font-weight: 400;
+    }
+}
+
+.jq-ry-container {
+    padding: 0;
+}
+
 
 @import "media";
 
