--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1137,9 +1137,29 @@
 .catalog {
     padding: 120px 0;
 
+    &__inner {
+        display: flex;
+    }
+
     &__filters {
         max-width: 270px;
+        margin-right: 30px;
+        width: 100%;
     }
+
+    &__content {
+        max-width: 870px;
+    }
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        gap: 40px 30px;
+        margin-bottom: 110px;
+    }
+
+
 }
 
 .filter {
