--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -403,6 +403,107 @@
         }
     }
 
+    &.product-item--list {
+        max-width: 870px;
+        width: 100%;
+        min-height: 500px;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 40px 50px;
+        box-shadow: none;
+        align-items: flex-start;
+
+        &:hover {
+            background-color: transparent;
+
+            .product-item__icons {
+                visibility: hidden;
+            }
+        }
+
+        &.product-item--list .product-item__img-box {
+            border: 2px solid #f2f2f2;
+            height: auto;
+            max-width: 370px;
+            width: 100%;
+            min-height: 500px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &.product-item--list .product-item__img {
+            margin-bottom: 0;
+            background-size: cover;
+            width: 80%;
+            height: 80%;
+        }
+
+        &.product-item--list .product-item__box {
+            padding: 90px 0 80px;
+        }
+
+        &.product-item--list .product-item__title {
+            font-size: 40px;
+            line-height: 26px;
+            margin-bottom: 25px;
+            color: #333333;
+            @extend %rubik-400;
+        }
+
+        &.product-item--list .stars {
+            display: block;
+            margin-bottom: 40px;
+        }
+
+        &.product-item--list .product-item__price {
+            font-size: 30px;
+            line-height: 26px;
+            margin-bottom: 25px;
+            color: #333333;
+            @extend %rubik-400;
+            text-align: left;
+        }
+
+        &.product-item--list .product-item__description {
+            display: block;
+            color: $title;
+            @extend %rubik-400;
+            margin-bottom: 35px;
+        }
+
+        &.product-item--list .product-item__box-icons {
+            display: inline-flex;
+            gap: 0 10px;
+        }
+
+        &.product-item--list .product-item__icon-link {
+            width: 50px;
+            height: 50px;
+            background-color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
+            transition: all .3s;
+
+            &:hover {
+                background-color: $primary;
+                box-shadow: none;
+
+                path {
+                    fill: #f9fafb;
+                }
+            }
+        }
+    }
+
+    &__box-icons,
+    &__description,
+    .stars {
+        display: none;
+    }
+
     &__img {
         margin-bottom: 60px;
     }
@@ -418,6 +519,7 @@
         @extend %dmsans-700;
         line-height: 1;
         color: $primary;
+        text-align: center;
     }
 
     &__icons {
@@ -1141,7 +1243,8 @@
     }
 
     &__items-list {
-        display: inline-block;
+        display: flex;
+        flex-wrap: wrap;
         column-gap: 40px;
         margin-bottom: 75px;
     }
