--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1509,6 +1509,135 @@
     }
 }
 
+.product-details {
+    padding: 120px 0;
+
+    &__item {
+    }
+
+    &__inner {
+        display: flex;
+    }
+
+    &__slide {
+        width: 550px;
+        margin-right: 70px;
+    }
+
+    &__content {
+        width: 550px;
+    }
+}
+
+.product-slide {
+    display: flex;
+
+    &__thumb {
+        margin-right: 25px;
+        width: 140px;
+    }
+
+    &__thumb-item {
+        width: 140px;
+        height: 160px;
+        border: 2px solid #f2f2f2;
+        margin-bottom: 12px;
+        cursor: pointer;
+
+        img {
+            object-fit: cover;
+            margin: 0 auto;
+            width: auto;
+            height: 156px;
+        }
+    }
+
+    &__big {
+        width: 390px;
+        height: 530px;
+        border: 2px solid #f2f2f2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+        img {
+            object-fit: cover;
+            margin: 0 auto;
+        }
+    }
+}
+
+.product-content {
+    width: 550px;
+
+    &.product-details__content.product-content .product-item__box {
+        padding: 30px 0;
+    }
+
+    &.product-details__content.product-content .product-item__form {
+        margin-bottom: 55px;
+    }
+
+    &.product-details__content.product-content .product-item__btn {
+        @extend %btn;
+        border-radius: 5px;
+        height: 50px;
+        width: 208px;
+        text-transform: uppercase;
+    }
+
+    &.product-details__content.product-content .product-item__info {
+        color: $title;
+        @extend %rubik-400;
+    }
+
+    &.product-details__content.product-content .product-item__input[type="number"] {
+        background-color: transparent;
+        outline: none;
+        height: 51px;
+        max-width: 48px;
+        width: 100%;
+        border: 1px solid $primary;
+        font-size: 15px;
+        @extend %rubik-400;
+    }
+
+    &.product-details__content.product-content {
+        input[type="number"] {
+            -moz-appearance: textfield;
+            -webkit-appearance: textfield;
+            appearance: textfield;
+        }
+
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            display: none;
+        }
+    }
+
+    &.product-details__content.product-content .product-item__label {
+        display: inline-flex;
+        margin-right: 15px;
+    }
+
+    &.product-details__content.product-content {
+        input[type="number"] {
+            text-align: center;
+        }
+    }
+
+    &.product-details__content.product-content .product-item__minus,
+    &.product-details__content.product-content .product-item__plus {
+        width: 48px;
+        height: 51px;
+        display: block;
+        border: 1px solid $primary;
+        background-color: transparent;
+        cursor: pointer;
+    }
+}
+
 
 @import "media";
 
