--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -707,7 +707,7 @@
     }
 }
 
-.blog {
+.articles {
     padding-top: 120px;
     background: linear-gradient(to bottom, white 435px, #fef7f0 443px);
 
@@ -1509,6 +1509,58 @@
     }
 }
 
+.filter-search {
+    &__form {
+        display: flex;
+        border: 1px solid #edf1f4;
+        border-radius: 5px;
+    }
+
+    &__input {
+        border: none;
+        width: 100%;
+        max-width: 221px;
+    }
+
+    &__icon {
+        border-radius: 5px;
+        background-color: #edf1f4;
+        padding: 13px 15px;
+    }
+}
+
+.filter-recent-posts {
+    @extend %rubik-400;
+
+    &__img-box {
+        width: 100%;
+        max-width: 70px;
+    }
+
+    &__item {
+        display: flex;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+
+    &__item:last-child {
+        margin-bottom: 0;
+    }
+
+    &__title {
+        font-size: 14px;
+        color: #333333;
+        line-height: 1.4;
+    }
+
+    &__date {
+        font-size: 12px;
+        color: #9a9a9a;
+        line-height: 20px;
+        margin-top: 5px;
+    }
+}
+
 .product-details {
     padding: 120px 0;
 
@@ -1722,6 +1774,85 @@
     }
 }
 
+.blog {
+    padding: 120px 0;
+
+    &__inner {
+        @extend %rubik-400;
+        display: flex;
+    }
+
+    &__list {
+        max-width: 830px;
+        width: 100%;
+    }
+
+    &__item {
+        margin-bottom: 50px;
+    }
+
+    &__box {
+        position: relative;
+        margin-bottom: 40px;
+    }
+
+    &__holder {
+        position: absolute;
+        bottom: 0;
+        background-color: $primary;
+        padding: 30px;
+        font-size: 12px;
+        line-height: 1;
+
+
+    }
+
+    &__date {
+        color: #ffffff;
+        margin-right: 25px;
+    }
+
+    &__author {
+        color: #ffffff;
+    }
+
+    &__title {
+
+        font-size: 36px;
+        color: #191919;
+        margin-bottom: 35px;
+    }
+
+    &__text {
+        color: $title;
+        margin-bottom: 35px;
+    }
+
+    &__link {
+        display: inline-flex;
+        font-size: 15px;
+        line-height: 0.8;
+        color: $primary;
+        padding: 23px 20px;
+        background-color: rgba(0, 0, 0, 0);
+        border: 1px solid $primary;
+        font-weight: bold;
+    }
+
+    &__link-img {
+        margin-left: 45px;
+    }
+
+    &__filters {
+        margin-left: 70px;
+        max-width: 270px;
+        width: 100%;
+    }
+
+    &__pagination{
+        margin-top: 25px;
+        justify-content: start;
+    }
+}
 
 @import "media";
-
